Added a bunch to the control panel.
Mostly working.

--- a/fixData.html
+++ b/fixData.html
@@ -16,7 +16,7 @@
 
 	function start()
 	{
-		var d = mergeGermany( deaths, FAVG );
+		var d = mergeGermany( populations, FADD );
 		var nd = bringOutYears( d );
 		document.write( JSON.stringify( nd ) );
 		//convertBirthsSecondStage();
